@@ -1,5 +1,13 @@
 2016-11-11 Even Rouault <even.rouault at spatialys.com>
 
+	* libtiff/tif_dirread.c: reject images with OJPEG compression that
+	have no TileOffsets/StripOffsets tag, when OJPEG compression is
+	disabled. Prevent null pointer dereference in TIFFReadRawStrip1()
+	and other functions that expect td_stripbytecount to be non NULL.
+	Fixes http://bugzilla.maptools.org/show_bug.cgi?id=2585
+
+2016-11-11 Even Rouault <even.rouault at spatialys.com>
+
 	* tools/tiffcrop.c: fix multiple uint32 overflows in
 	writeBufferToSeparateStrips(), writeBufferToContigTiles() and
 	writeBufferToSeparateTiles() that could cause heap buffer overflows.
